# digdigdig3

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  TESTING-STRATEGY.md  build.rs  catcher.toml.example  deep_smoke_report.txt  smoke_full_report.txt
crates/dig3-cli/: Cargo.toml
crates/dig3-cli/src/: main.rs
crates/dig3-core/: Cargo.toml
crates/dig3-core/examples/: canonical_demo.rs  e2e_canonical.rs  e2e_metadata.rs  e2e_replay.rs  e2e_smoke.rs  e2e_storage_read.rs  exchange_hub_demo.rs  feed_demo.rs  full_smoke.rs  liq_capture.rs  pool_dispatch.rs  replay_demo.rs
crates/dig3-core/src/: lib.rs
crates/dig3-core/src/connector_manager/: aggregator.rs  config.rs  hub.rs  registry.rs
crates/dig3-core/src/connector_manager/feed/: builder.rs  feed.rs  mod.rs  options.rs
crates/dig3-core/src/core/: macros.rs  mod.rs  normalization.rs  orderbook.rs  rest_cache.rs
crates/dig3-core/src/core/chain/: cosmos.rs  starknet_chain.rs
crates/dig3-core/src/core/cure/: dedup.rs  gap.rs  integrity.rs  repair.rs
crates/dig3-core/src/core/grpc/: client.rs  mod.rs
crates/dig3-core/src/core/http/: graphql.rs  mod.rs
crates/dig3-core/src/core/replay/: hub.rs  mod.rs  rate.rs  ws.rs
crates/dig3-core/src/core/storage/: event_log.rs  index.rs  manager.rs
crates/dig3-core/src/core/traits/: account.rs  has_capabilities_stubs.rs  market_data.rs  operations.rs  positions.rs
crates/dig3-core/src/core/types/: capabilities.rs  common.rs  extended_market_data.rs  market_data.rs  mod.rs  responses.rs  symbol_input.rs  trading.rs  websocket.rs
crates/dig3-core/src/l1/: mod.rs
crates/dig3-core/src/testing/: assertions.rs
crates/dig3-core/tests/: cure.rs  event_log.rs  lighter_timeout.rs  live_regression_baseline.rs  live_ws_event_rates.rs  orderbook_tracker.rs  reconnect_survival.rs  replay.rs  rest_cache.rs  sequence_gap.rs  silent_watchdog.rs  storage_manager.rs
crates/dig3-station/: Cargo.toml
crates/dig3-station/examples/: e2e_canonical.rs  e2e_replay.rs  e2e_storage_read.rs  replay_demo.rs
crates/dig3-station/src/: builder.rs  cache.rs  lib.rs  orderbook.rs  persistence.rs  rest_cache.rs  station.rs  subscription.rs
crates/dig3-station/src/cure/: dedup.rs  gap.rs  integrity.rs  repair.rs
crates/dig3-station/src/replay/: hub.rs  mod.rs  ws.rs
crates/dig3-station/src/storage/: manager.rs
crates/dig3-station/tests/: cure.rs  event_log.rs  orderbook_tracker.rs  replay.rs  rest_cache.rs
crates/digdigdig3/: Cargo.toml
crates/digdigdig3-cli/: Cargo.toml
crates/digdigdig3-cli/src/: main.rs
crates/digdigdig3-station/: Cargo.toml
crates/digdigdig3-station/examples/: bar_align_e2e.rs  bar_align_matrix.rs  e2e_canonical.rs  e2e_replay.rs  hl_spot_ws_probe.rs  replay_demo.rs
crates/digdigdig3-station/src/: backfill.rs  bar_align.rs  builder.rs  cache.rs  derived.rs  error.rs  gap_heal.rs  lib.rs  normalize.rs  opfs_helpers.rs  orderbook.rs  persistence.rs  polling.rs  quota.rs  reconnect.rs  rest_cache.rs  station.rs  subscription.rs  ws_health.rs
crates/digdigdig3-station/src/cure/: gap.rs
crates/digdigdig3-station/src/data/: agg_trade.rs  auction_event.rs  balance_update.rs  bar.rs  basis.rs  block_trade.rs  composite_index.rs  footprint.rs  funding_rate.rs  funding_rate_ext.rs  funding_settlement.rs  historical_volatility.rs  index_price.rs  index_price_ext.rs  index_price_kline.rs  insurance_fund.rs  liquidation.rs  liquidation_bucket.rs  liquidation_ext.rs  long_short_ratio.rs  mark_price.rs  mark_price_ext.rs  mark_price_kline.rs  market_warning.rs  mod.rs  ob_delta.rs  ob_delta_ext.rs  ob_snapshot.rs  ob_snapshot_ext.rs  open_interest.rs  open_interest_ext.rs  option_greeks.rs  order_update.rs  orderbook_l3.rs  position_update.rs  predicted_funding.rs  premium_index_kline.rs  risk_limit.rs  settlement_event.rs  taker_volume.rs  (+4 more)
crates/digdigdig3-station/src/replay/: hub.rs  mod.rs  reader.rs  ws.rs
crates/digdigdig3-station/src/series/: data_point.rs  key.rs  map.rs  mod.rs  series.rs  store.rs  store_wasm.rs
crates/digdigdig3-station/src/settings/: mod.rs  store.rs  store_wasm.rs
crates/digdigdig3-station/src/storage/: manager_wasm.rs  mod.rs
crates/digdigdig3-station/tests/: bitmex_predicted_funding_live.rs  bitstamp_l3_live.rs  blob_persistence.rs  cure.rs  data_point_round_trip.rs  derived_stream_integration.rs  dual_symbol_routing.rs  event_log.rs  gap_heal_e2e.rs  gap_heal_unit.rs  label_per_subscriber.rs  mlc_scenarios_live.rs  multiplex.rs  okx_predicted_funding_live.rs  orderbook_tracker.rs  polling.rs  quota.rs  quota_stress.rs  replay.rs  rest_cache.rs  sequence_gap.rs  series_basics.rs  settings_store.rs  storage_manager.rs  subscribe_not_supported_live.rs  subscribe_report.rs  wasm_bar_align.rs  wasm_cure_replay.rs  wasm_e2e_matrix.rs  wasm_opfs_round_trip.rs  wasm_rest_parity.rs  wasm_settings_store.rs  wasm_station_persist.rs  wasm_station_smoke.rs  wasm_wave3_e2e.rs
crates/digdigdig3-station/tests/common/: mod.rs
crates/digdigdig3/data/: validation_snapshot.json
crates/digdigdig3/examples/: bitstamp_l3_raw.rs  bitstamp_trade_capture.rs  canonical_demo.rs  e2e_metadata.rs  e2e_smoke.rs  feed_demo.rs  gateio_oi_raw.rs  hl_spot_kline_probe.rs  hl_spot_wire_probe.rs  htx_index_raw.rs  liq_capture.rs  lossless_verify.rs  symbolinfo_raw_e2e.rs
crates/digdigdig3/src/: lib.rs
crates/digdigdig3/src/connector_manager/: factory.rs  hub.rs  mod.rs  pool.rs  registry.rs
crates/digdigdig3/src/core/: ARCHITECTURE_AUDIT.md  AUDIT_CEX_BATCH2.md  AUDIT_OPTIONAL_TRAITS.md  macros.rs  mod.rs  normalization.rs  proxy_allowlist.rs
crates/digdigdig3/src/l2/: mod.rs
crates/digdigdig3/src/l3/: mod.rs
crates/digdigdig3/src/testing/: assertions.rs  harness.rs  mod.rs  suites.rs
crates/digdigdig3/tests/: bingx_ws_live.rs  bitfinex_ws_live.rs  crypto_com_ws_live.rs  dydx_ws_live.rs  gateio_ws_live.rs  gemini_ws_live.rs  htx_ws_live.rs  kucoin_ws_live.rs  lighter_timeout.rs  lighter_ws_live.rs  reconnect_survival.rs  rest_override.rs  silent_watchdog.rs  upbit_ws_live.rs  wasm_smoke.rs
(+2242 files in other folders)
