[package]
name = "digdigdig3-station"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Layer 2 of digdigdig3 — consumer-facing builder over digdigdig3-core ExchangeHub. Opt-in persistence, cache, multiplex, reconnect, OB tracker, telemetry."
repository = "https://github.com/ZENG3LD/digdigdig3"
readme = "../../README.md"

[lib]
name = "digdigdig3_station"
path = "src/lib.rs"

[dependencies]
digdigdig3-core = { path = "../dig3-core" }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
dashmap = "5"
thiserror = "1"
chrono = "0.4"

# needed by moved modules (orderbook, cure, storage)
rust_decimal = "1"
sha2 = "0.10"
byteorder = "1.5"

# feature-gated deps
zstd = { version = "0.13", optional = true }
bincode = { version = "1.3", optional = true }
crc32fast = { version = "1.4", optional = true }
lru = { version = "0.12", optional = true }
metrics = { version = "0.23", optional = true }
metrics-exporter-prometheus = { version = "0.15", optional = true }
sled = { version = "0.34", optional = true }

[features]
default = ["persistence", "cache", "multiplex", "reconnect"]
full = ["default", "orderbook-tracker", "bar-loader", "metrics", "prometheus"]
minimal = []
persistence = ["dep:zstd", "dep:bincode", "dep:crc32fast", "dep:sled"]
cache = ["dep:lru"]
multiplex = []
reconnect = []
orderbook-tracker = []
bar-loader = []
metrics = ["dep:metrics"]
prometheus = ["metrics", "dep:metrics-exporter-prometheus"]
