[package]
name = "digdigdig3-station"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Consumer-facing builder over digdigdig3 ExchangeHub. Persistence, cache, replay, cure, orderbook tracker, multiplex, reconnect."
readme = "../../README.md"

[lib]
name = "digdigdig3_station"
path = "src/lib.rs"

[features]
default = ["persistence", "cache", "multiplex", "reconnect"]
full = ["default", "orderbook-tracker", "bar-loader", "metrics", "prometheus"]
minimal = []
persistence = ["dep:zstd", "dep:bincode", "dep:crc32fast", "dep:sled"]
cache = ["dep:lru"]
multiplex = []
reconnect = []
orderbook-tracker = []
bar-loader = []
metrics = ["dep:metrics"]
prometheus = ["metrics", "dep:metrics-exporter-prometheus"]

# ─── Shared dependencies ──────────────────────────────────────────────────────

[dependencies]
digdigdig3 = { workspace = true }

async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
dashmap = "5"
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }

# Numeric types used by DataPoint impls — pure Rust, compile on both
rust_decimal = "1"
sha2 = "0.10"
byteorder = "1.5"

# Feature-gated optional deps — wasm-compatible ones stay here; native-only
# ones (zstd links C, sled uses file I/O) live in the native target block below
# so they never enter the wasm32 dep graph even when default features include
# "persistence". Cargo resolver v2 allows optional deps in target-specific blocks
# to be referenced by [features].
lru = { version = "0.12", optional = true }
metrics = { version = "0.23", optional = true }
metrics-exporter-prometheus = { version = "0.15", optional = true }

# ─── Native-only dependencies ─────────────────────────────────────────────────

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Persistence deps — link native C code (zstd-sys) or use file I/O (sled).
# Kept in the native-only target block so the wasm32 dep graph never sees them
# even when the "persistence" feature is activated via the default feature set.
zstd = { version = "0.13", optional = true }
bincode = { version = "1.3", optional = true }
crc32fast = { version = "1.4", optional = true }
sled = { version = "0.34", optional = true }

# ─── wasm32-only dependencies ─────────────────────────────────────────────────

[target.'cfg(target_arch = "wasm32")'.dependencies]
# sync + macros only — no I/O, no time, no net (see digdigdig3 Cargo.toml note)
tokio = { version = "1", default-features = false, features = ["sync", "macros"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }

# chrono wasmbind + now — enables Utc::now() on wasm32 via JS Date.now().
chrono = { version = "0.4", default-features = false, features = ["std", "now", "wasmbind"] }

# ─── Dev dependencies ─────────────────────────────────────────────────────────

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio-test = "0.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
